tests/baselines/reference/accessorWithoutBody2.errors.txt
accessorWithoutBody2.ts(1,20): error TS1005: '{' expected.


==== accessorWithoutBody2.ts (1 errors) ====
    var v = { set foo(a) }
                       ~
!!! error TS1005: '{' expected.